# pixels-primitives

./: Cargo.toml  LICENSE  README.md
examples/draw_circles/: Cargo.toml
examples/draw_circles/src/: main.rs
examples/draw_lines/: Cargo.toml
examples/draw_lines/src/: main.rs
examples/draw_rectangles/: Cargo.toml
examples/draw_rectangles/src/: main.rs
examples/draw_squares/: Cargo.toml
examples/draw_squares/src/: main.rs
examples/draw_triangles/: Cargo.toml
examples/draw_triangles/src/: main.rs
src/: lib.rs  math.rs
