[package]
name = "pixels_primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"

[workspace]
members = [
    "examples/*",
]
