[package]
name = "pixels_primitives"
version = "0.1.1"
edition = "2021"
authors = ["Chloe-Woahie <longwelldotpy@gmail.com>"]
repository = "https://github.com/Chloe-Woahie/pixels-primitives"
description = "An easy and simple wrapper for lines and simple shapes for the pixels crate."
keywords = ["pixels", "graphics", "2d-graphics"]
categories = ["graphics"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"

[workspace]
members = [
    "examples/*",
]
